tests/miniJava/neg/006845_mutation.MiniJava
class int [] java ; java { public static void Main ( String [ ] java ) { { } } }
